# Job-Search-Agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  remote-jobs2025-04-23_1745432521.csv  remote_jobs2025-04-23.csv  remote_opportunities2025-04-23.csv  resume_parser.py  ui.py
tools/: __init__.py  excel_saver.py  excel_saver_plain.py  googlesearchtool.py  tavilysearchtool.py  web_scraper.py
